<resources>
    <string name="app_name">MacaronCoffeeShop</string>
    <string name="top_bar_name">MACARON</string>
    <string name="product">Product</string>
    <string name="more">More</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="_0">0</string>
    <string name="customize">Customize</string>
    <string name="add_order">Add Order</string>
    <string name="variant">Variant</string>
    <string name="ice">Ice</string>
    <string name="hot">Hot</string>
    <string name="size">Size</string>
    <string name="regular">Regular</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="sugar">Sugar</string>
    <string name="normal">Normal</string>
    <string name="less">Less</string>
    <string name="total">Total</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="gift">Gift</string>
    <string name="position">Position</string>
    <string name="not_yet_implemented">Not yet Implemented</string>
    <string name="make_offer">Make offer</string>
    <string name="add_more">Add more</string>
    <string name="delete">delete</string>
    <string name="no_products">No Products</string>
    <string name="your_offer_was_successful">Your offer was successful</string>
    <string name="thank_you">Thank you!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="item">Item</string>
</resources>